--- a/client/package.json
+++ b/client/package.json
@@ -9,7 +9,6 @@
       "@babel/preset-react"
     ]
   },
-  
   "scripts": {
     "dev": "vite",
     "test": "jest",
@@ -39,7 +38,9 @@
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
+    "identity-obj-proxy": "^3.0.0",
     "jest": "^29.7.0",
+    "jest-css-modules": "^2.1.0",
     "jest-environment-jsdom": "^29.7.0",
     "react-test-renderer": "^18.2.0",
     "vite": "^4.4.5"
